@@ -12,6 +12,7 @@
  - fixed   : Minor issues here and there
  - new     : Runs under the forthcoming version of XBMC - Dharma
  - new     : Cache ffmpeg output used for framerate extraction (comm flagging)
+ - new     : Added 'Enable Aggressive Caching' to Settings->MythTV to pre-cache framerate and commercial break info
   
 06/08/2010 - MythBox RC1
 =============================
